--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,8 @@
-<div class="bg-indigo-600">
+<div class="bg-primary-element noise">
     <div class="max-w-screen-xl mx-auto px-4 py-3 text-white sm:text-center md:px-8">
-        <p class="font-medium">
-            We just launched a new version of our library!
-            <%= link_to "Learn more", root_path, class: "font-semibold underline duration-150 hover:text-indigo-100 inline-flex items-center gap-x-1" %>
+        <p class="font-secondary font-medium">
+            Зарегистрируйся и получи скидку 10% на первую покупку!
+            <%= link_to "Зарегистрироваться", root_path, class: "font-secondary font-semibold underline duration-150 hover:text-teal-400 inline-flex items-center gap-x-1" %>
             </a>
         </p>
     </div>
@@ -10,4 +10,4 @@
 
 
 
-<h1 class="text-cyan-300 text-3xl">Hello</h1>
+<h1 class="font-primary  text-primaryElement  text-3xl">НАЙДИТЕ ОДЕЖДУ, СООТВЕТСТВУЮЩУЮ ВАШЕМУ СТИЛЮ</h1>
