--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -38,14 +38,16 @@
   <div class="flex items-center px-8 gap-4">
     <!-- Значек карзины -->
     <span>
-      <svg class="stroke-current ml-1 w-8 h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="stroke-current ml-1 w-8 h-8 hover:stroke-teal-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path stroke-width="1.6" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
       </svg>
     </span>
     <% if @user %>
       <a href="/profile" class="text-xl">👤</a>
     <% else %>
-      <a href="/login" class="font-secondary px-4 py-2 bg-primary-element noise text-white rounded-full hover:bg-teal-600">Войти</a>
+      <%= button_to new_session_path, class: "font-secondary px-4 py-2 bg-primary-element noise text-white rounded-full hover:bg-teal-600" do %>
+        Войти
+      <% end %>
     <% end %>
   </div>
 
