--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,8 @@
     <div class="max-w-screen-xl mx-auto px-4 py-3 text-white sm:text-center md:px-8">
         <p class="font-secondary font-medium">
             Зарегистрируйся и получи скидку 10% на первую покупку!
-            <%= button_to login_path, method: :post, class: "font-secondary font-semibold underline duration-150 hover:text-teal-400 inline-flex items-center gap-x-1" do %>
-                <span>Зарегистрироваться</span>
+            <%= link_to new_user_path, method: :post, class: "font-secondary font-semibold underline duration-150 hover:text-teal-400 inline-flex items-center gap-x-1" do %>
+                Зарегистрироваться
             <% end %>
         </p>
     </div>
