--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if object.present? && object.errors.any? %>
+<% if object.errors.any? %>
   <div class="mb-4 rounded-3xl bg-red-100 p-4 text-red-600">
     <h2 class="font-bold">Ошибки:</h2>
     <ul class="mt-2 list-disc list-inside">
