--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
       <div>
         <%= form.label :name, "Имя", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
         <div class="mt-2">
-          <%= form.text_field :name, placeholder: "Твое имя", class: "block w-full h-13 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.text_field :name, placeholder: "Твое имя", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
         </div>
       </div>
 
@@ -17,7 +17,7 @@
       <div>
         <%= form.label :email, "Email адрес", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
         <div class="mt-2">
-          <%= form.email_field :email, placeholder: "example@gmail.com", class: "block w-full h-13 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.email_field :email, placeholder: "example@gmail.com", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
         </div>
       </div>
 
@@ -27,7 +27,7 @@
           <%= form.label :password, "Пароль", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
         </div>
         <div class="mt-2">
-          <%= form.password_field :password, placeholder: "145F2!k47", class: "block w-full h-13 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.password_field :password, placeholder: "••••••••", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
         </div>
       </div>
 
@@ -37,24 +37,26 @@
           <%= form.label :password_confirmation, "Повторите пароль", class: "block text-sm font-secondary text-secondary-element font-medium text-gray-900" %>
         </div>
         <div class="mt-2">
-          <%= form.password_field :password_confirmation, placeholder: "145F2!k47", class: "block w-full h-13 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
+          <%= form.password_field :password_confirmation, placeholder: "••••••••", class: "block w-full h-12 px-6 font-secondary rounded-full bg-border text-base text-gray-900 placeholder:text-gray-400 focus:outline-none focus:text-teal-600 hover:text-teal-600", required: true %>
         </div>
       </div>
 
       <!-- Кнопка Register -->
       <div>
-        <%= form.submit "Зарегистрироваться", class: "flex items-center justify-center noise w-full h-15 px-6 rounded-full bg-primary-element text-lg/6 font-bold text-white shadow-xs hover:bg-teal-400" %>
+        <%= form.submit "Зарегистрироваться", class: "flex items-center justify-center noise w-full h-12 px-6 rounded-full bg-primary-element text-lg/6 font-bold text-white shadow-xs hover:bg-teal-400" %>
       </div>
     <% end %>
 
     <p class="my-6 font-secondary text-center text-sm/6 text-gray-500">
       Есть аккаунт?
-      <%= link_to "Войти", new_session_path, class: "font-bold font-secondary text-teal-400 hover:text-teal-300" %>
+      <%= link_to new_session_path, method: :get, class: "font-bold font-secondary text-teal-400 hover:text-teal-300" do %>
+        Войти
+      <% end %>
     </p>
   </div>
 
   <!-- Отображение ошибок -->
-  <div class="sm:max-w-sm">
+  <div class="my-6 sm:max-w-sm sm:w-full sm:max-w-sm">
     <%= render "shared/error_messages", object: @user %>
   </div>
 </div>
