--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -10,15 +10,27 @@
       <button class="arrow-rotate-button font-secondary font-normal px-4 py-2 rounded hover:text-teal-600 inline-flex items-center select-none">
         Каталог
         <!-- Значек стрелки -->
-        <span class="ml-1 transform transition-transform duration-200 ease-in-out" id="arrow">
+        <span class="ml-1 transform transition-transform duration-250 ease-in-out" id="arrow">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="rgb(0, 0, 0)" class="w-4.5 h-4.5">
             <path stroke-width="1.6" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
           </svg>
         </span>
       </button>
-      <div id="dropdown" class="absolute left-0 mt-2 w-48 bg-white border rounded shadow-md hidden group-hover:block">
-        <a href="/category/1" class="block px-4 py-2 hover:bg-gray-100">Категория 1</a>
-        <a href="/category/2" class="block px-4 py-2 hover:bg-gray-100">Категория 2</a>
+      <div id="dropdown" class="absolute top-0 left-0 mt-10 w-max bg-white border-border border rounded-3xl shadow-xl hidden group-hover:block">
+        <div class="flex flex-row p-2">
+          <% @categories.each do |category| %>
+            <div>
+              <a href="<%= category_path(category) %>" class="block px-4 py-2 font-primary text-primary-element hover:text-teal-600"><%= category.name %></a>
+              <% if category.children.any? %>
+                <div class="pl-4">
+                  <% category.children.each do |child| %>
+                    <a href="<%= category_path(child) %>" class="block px-4 py-2 font-secondary font-medium text-secondary-element hover:text-teal-600"><%= child.name %></a>
+                  <% end %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
     <!-- Конец кода для раздела каталог -->
@@ -42,16 +54,16 @@
   <div class="flex items-center px-8 gap-4">
     <!-- Значек карзины -->
     <span>
-      <svg class="stroke-current ml-1 w-8 h-8 hover:stroke-teal-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-width="1.6" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+      <svg class="stroke-current ml-1 w-8 h-8 hover:stroke-teal-400" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-width="1.8" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
       </svg>
     </span>
     <% if @user %>
-      <svg class="stroke-current ml-1 w-8 h-8 hover:stroke-teal-600" viewBox="0 0 24 24" fill="none"  xmlns="http://www.w3.org/2000/svg">
-        <path stroke-width="1.6" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+      <svg class="stroke-current ml-1 w-8 h-8 hover:stroke-teal-400" viewBox="0 0 24 24" fill="none"  xmlns="http://www.w3.org/2000/svg">
+        <path stroke-width="1.8" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
       </svg>
     <% else %>
-      <%= button_to new_session_path, method: :get, class: "font-secondary px-4 py-2 bg-primary-element noise text-white rounded-full hover:bg-teal-600" do %>
+      <%= button_to new_session_path, method: :get, class: "font-secondary px-4 py-2 bg-primary-element noise text-white rounded-full select-none hover:text-teal-300" do %>
         Войти
       <% end %>
     <% end %>
