--- a/app/components/product_card_component.html.erb
+++ b/app/components/product_card_component.html.erb
@@ -4,15 +4,15 @@
     <% if @product.images.attached? %>
       <%= image_tag @product.images.first, class: "w-full h-full object-cover" %>
     <% else %>
-      <div class="w-full h-full bg-gray-200 flex items-center justify-center">
+      <div class="w-full h-full bg-border flex items-center justify-center">
         <span class="text-gray-500">No image</span>
       </div>
     <% end %>
   </div>
 
   <!-- Информация о товаре -->
-  <div class="py-4">
-    <h3 class="text-lg font-secondary font-bold mb-2"><%= @product.name %></h3>
+  <div class="flex flex-col gap-2 pt-3">
+    <h3 class="text-lg font-secondary font-semibold"><%= @product.name %></h3>
     
     <!-- Оценка товара -->
     <div class="ml-[-3px]">
@@ -21,7 +21,7 @@
     
     <!-- Цена -->
     <div class="flex items-center justify-between">
-      <span class="text-lg font-bold text-teal-600"><%= number_to_currency(@product.base_price) %></span>
+      <span class="text-2xl font-bold text-primary-element"><%= number_to_currency(@product.base_price) %></span>
     </div>
   </div>
 </div>
