--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="container max-w-screen-[1440px] mx-auto">
+    <div class="container max-w-screen-[1440px] mx-auto scroll-smooth">
       <%= yield %>
     </div>
   </body>
