--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,18 @@
-<div class="bg-primary-element noise">
-    <div class="max-w-screen-xl mx-auto px-4 py-3 text-white sm:text-center md:px-8">
-        <p class="font-secondary font-medium">
-            Зарегистрируйся и получи скидку 10% на первую покупку!
-            <%= link_to new_user_path, method: :post, class: "font-secondary font-semibold underline duration-150 hover:text-teal-400 inline-flex items-center gap-x-1" do %>
-                Зарегистрироваться
-            <% end %>
-        </p>
+<!-- Баннер для не зарегистрированных пользователей -->
+<% if logged_in? == false %>
+    <div class="bg-primary-element noise">
+        <div class="max-w-screen-xl mx-auto px-4 py-3 text-white sm:text-center md:px-8">
+            <p class="font-secondary font-medium">
+                Зарегистрируйся и получи скидку 10% на первую покупку!
+                <%= link_to new_user_path, method: :post, class: "font-secondary font-semibold underline duration-150 hover:text-teal-400 inline-flex items-center gap-x-1" do %>
+                    Зарегистрироваться
+                <% end %>
+            </p>
+        </div>
     </div>
-</div>
+<% end %>
 
+<!-- Navbar -->
 <%= render NavbarComponent.new(user: current_user, categories: @categories) %>
 
 <!-- Приветственная часть -->
@@ -16,12 +20,12 @@
     <div class="p-12 flex-1 min-w-0">
         <!-- Текст -->
         <h1 class="pb-6 font-primary text-primaryElement text-5xl font-black">НАЙДИТЕ ОДЕЖДУ, СООТВЕТСТВУЮЩУЮ ВАШЕМУ СТИЛЮ</h1>
-        <h2 class="py-10 font-secondry text-secondaryElement text-xl font-light">
+        <h2 class="py-10 font-secondary text-secondary-element text-xl font-light">
             Погрузитесь в наш широкий ассортимент уникальных изделий, каждое из которых создано с заботой о деталях, чтобы подчеркнуть вашу индивидуальность и стать выражением вашего стиля.
         </h2>
 
         <!-- Кнопка -->
-        <%= button_to root_path, class: "py-4 flex items-center justify-center noise h-14 px-12 rounded-full bg-primary-element text-lg/6 font-bold text-white shadow-xs hover:text-teal-300 select-none" do %>
+        <%= button_to root_path, class: "btn-primary noise" do %>
             Каталог
         <% end %>
 
@@ -55,11 +59,63 @@
 
 <!-- Часть "Новое поступление" -->
 <h1 class="pt-20 pb-14 font-primary text-primaryElement flex justify-center text-5xl font-black">Новое поступление</h1>
-
 <div class="container mx-auto px-4 py-8">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
     <% @products.each do |product| %>
       <%= render ProductCardComponent.new(product: product) %>
     <% end %>
   </div>
+</div>
+
+<div class="flex justify-center justify-items-center pb-16">
+  <%= button_to root_path, class: "btn-outline" do %>
+    Смотреть больше
+  <% end %>
+</div>
+
+<hr class="my-4 border-t border-gray-300">
+
+<!-- Часть "Больше всего продано" -->
+<h1 class="pt-20 pb-14 font-primary text-primary-element flex justify-center text-5xl font-black">Больше всего продано</h1>
+<div class="container mx-auto px-4 py-8">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+    <% @products.each do |product| %>
+      <%= render ProductCardComponent.new(product: product) %>
+    <% end %>
+  </div>
+</div>
+
+
+<div class="bg-border rounded-3xl h-auto">
+    <h1 class="pt-14 font-primary text-primary-element flex justify-center text-5xl font-black">Найди свой стиль</h1>
+    <!-- Карточки категорий -->
+    <div class="flex items-center justify-center py-16 px-34">
+        <div class="grid grid-cols-5 gap-6">
+            <!-- Стиль Casual -->
+            <div class="col-span-2 w-auto h-90 rounded-3xl overflow-hidden">
+                <%= image_tag 'styles/casual-style.png', class: 'w-full h-auto object-cover object-center select-none' %>
+            </div>
+
+            <!-- Стиль Formal -->
+            <div class="col-span-3 w-auto h-90 rounded-3xl overflow-hidden">
+                <%= image_tag 'styles/formal-style.png', class: 'w-full h-auto object-cover object-right select-none' %>
+            </div>
+            
+
+            <!-- Стиль Party -->
+            <div class="col-span-3 w-auto h-90 rounded-3xl overflow-hidden">
+                <%= image_tag 'styles/party-style.png', class: 'w-full h-auto object-cover object-right select-none' %>
+            </div>
+
+            <!-- Стиль Sport -->
+            <div class="col-span-2 w-auto h-90 rounded-3xl overflow-hidden">
+                <%= image_tag 'styles/sport-style.png', class: 'w-full h-auto object-cover object-center select-none' %>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h1 class="pt-20 pb-14 font-primary text-primary-element flex justify-start text-5xl font-black">Отзывы наших покупателей</h1>
+<div class="grid grid-row-1 gap-6">
+
 </div>
