Added cart logic

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,11 +4,31 @@
 
 @import "tailwindcss";
 
+
+/*
+Дизайн ориентирован на мобильные устройства по умолчанию  
+┌──────────────┬────────────────────────┬───────────────┐
+│ Брейкпоинт   │ Тип устройства         │ Разрешение    │
+├──────────────┼────────────────────────┼───────────────┤
+│ sm           │ Большие телефоны       │ ≥  640px      │
+│ md           │ Планшеты               │ ≥  768px      │
+│ lg           │ Ноутбуки               │ ≥ 1024px      │
+│ xl           │ Большие мониторы       │ ≥ 1280px      │
+│ 2xl          │ Full HD дисплеи (1080p)│ ≥ 1920px      │
+│ 3xl          │ Ультраширокие (21:9)   │ ≥ 2560px      │
+└──────────────┴────────────────────────┴───────────────┘*/
+
 /* Добовление переменных к Tailwind */
 @theme {
+    /* Кастомные breakpoint-ы */
+    --breakpoint-2xl: 120rem;
+    --breakpoint-3xl: 160rem;
+
+    /* Кастомные шрифты */
     --font-primary: "Unbounded", sans-serif;
     --font-secondary: "Golos Text", sans-serif;
 
+    /* Кастомные Цвета */
     --color-background: rgb(1, 1, 1);
     --color-primary-element: rgb(0, 0, 0);
     --color-secondary-element: rgba(0, 0, 0, 0.6);
